--- a/madison/contact.html
+++ b/madison/contact.html
@@ -6,7 +6,7 @@
 <html class="no-js"><!--<![endif]-->
 
 <head>
-  <title>Madison | Contact</title>
+  <title>Fiols | Contacto</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link href='http://fonts.googleapis.com/css?family=Arvo:400' rel='stylesheet' type='text/css'>
@@ -19,28 +19,19 @@
 <body>
   <div class="wrapper">
     <header class="cf">
-      <div id="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
+      <div id="logo"><a href="index.html"><img src="img/Black & White Bold Modern Trade Electrician Logo (1).png"></a>
+      </div>
       <ul id="social-bar" class="cf">
         <li class="dribbble"><a href="#" title="Dribbble"></a></li>
         <li class="facebook"><a href="#" title="Facebook"></a></li>
-        <li class="googleplus"><a href="#" title="googleplus"></a></li>
-        <li class="twitter"><a href="#" title="twitter"></a></li>
       </ul>
     </header>
     <nav class="cf">
       <ul id="nav" class="sf-menu">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="#">REGULAR PAGE</a>
-          <ul>
-            <li><a href="page.html">Columns</a></li>
-            <li><a href="page-typography.html">Typography</a></li>
-            <li><a href="page-elements.html">Elements</a></li>
-          </ul>
-        </li>
+        <li class="current-menu-item"><a href="index.html">INICIO</a></li>
         <li><a href="work.html">WORK</a></li>
-        <li class="current-menu-item"><a href="contact.html">CONTACT</a></li>
-        <li class="important"><a href="#">GET IT NOW</a></li>
+        <li><a href="contact.html">CONTACTO</a></li>
+
       </ul>
     </nav>
     <div id="main" class="cf">
