--- a/madison/index.html
+++ b/madison/index.html
@@ -6,7 +6,7 @@
 <html class="no-js"><!--<![endif]-->
 
 <head>
-  <title>Madison</title>
+  <title>Fiols reparaciones</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link href='http://fonts.googleapis.com/css?family=Arvo:400' rel='stylesheet' type='text/css'>
@@ -24,23 +24,19 @@
       <ul id="social-bar" class="cf">
         <li class="dribbble"><a href="#" title="Dribbble"></a></li>
         <li class="facebook"><a href="#" title="Facebook"></a></li>
-        <li class="googleplus"><a href="#" title="googleplus"></a></li>
-        <li class="twitter"><a href="#" title="twitter"></a></li>
       </ul>
     </header>
     <nav class="cf">
       <ul id="nav" class="sf-menu">
         <li class="current-menu-item"><a href="index.html">INICIO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-
-        <li><a href="work.html">WORK</a></li>
+        <li><a href="work.html">TRABAJOS</a></li>
         <li><a href="contact.html">CONTACTO</a></li>
-        <li class="important"><a href="#">GET IT NOW</a></li>
+
       </ul>
     </nav>
     <div id="main" class="cf">
       <div class="slider-wrapper">
-        <div id="slider" class="nivoSlider"> <img title="Caption Text" src="img/dummies/slides/01.jpg" alt=""> <img
+        <div id="slider" class="nivoSlider"> <img src="img/dummies/slides/01.jpg" alt=""> <img
             src="img/dummies/slides/02.jpg" alt=""> <img src="img/dummies/slides/03.jpg" alt=""></div>
       </div>
       <div class="tagline">SHOWCASE YOUR WORK WITH MADISON</div>
