--- a/madison/index.html
+++ b/madison/index.html
@@ -13,36 +13,37 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="js/modernizr.js"></script>
 </head>
 
 <body>
   <div class="wrapper">
     <header class="cf">
-      <div id="logo"><a href="index.html"><img src="img/Black & White Bold Modern Trade Electrician Logo (1).png"></a>
+      <div class="container" id="logo"><a href="index.html">
+          <img src="img/Black & White Bold Modern Trade Electrician Logo (1).png">
+        </a>
       </div>
-      <ul id="social-bar" class="cf">
-        <li class="dribbble"><a href="#" title="Dribbble"></a></li>
-        <li class="facebook"><a href="#" title="Facebook"></a></li>
-      </ul>
-    </header>
-    <nav class="cf">
-      <ul id="nav" class="sf-menu">
-        <li class="current-menu-item"><a href="index.html">INICIO</a></li>
-        <li><a href="work.html">TRABAJOS</a></li>
-        <li><a href="contact.html">CONTACTO</a></li>
 
-      </ul>
-    </nav>
+    </header>
+
     <div id="main" class="cf">
       <div class="slider-wrapper">
         <div id="slider" class="nivoSlider"> <img src="img/dummies/slides/01.jpg" alt=""> <img
             src="img/dummies/slides/02.jpg" alt=""> <img src="img/dummies/slides/03.jpg" alt=""></div>
+
       </div>
-      <div class="tagline">SHOWCASE YOUR WORK WITH MADISON</div>
-      <div class="line-heading"> FEATURED WORK <a href="work.html">view all</a></div>
+
+
+      <!--------------------------------------------TRABAJOS-------------------------------------------------->
+
+
+      <div class="tagline">ALGUNOS DE NUESTROS TRABAJOS</div>
+
+
       <ul class="feature cf">
-        <li> <a href="project.html" class="thumb"> <img src="img/dummies/f-01.jpg" alt="">
+        <li> <a href="project.html" class="thumb"> <img src="img/dummies/slides/01.jpg" alt="">
             <div class="img-overlay">READ MORE</div>
           </a> <a href="project.html" class="title">LOREM IPSUM DOLOR</a>
           <div class="categories"><a href="#">webdesign, </a><a href="#">print, </a><a href="#">photo</a></div>
@@ -50,7 +51,7 @@
             egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</div>
           <a href="project.html" class="action-button">READ MORE</a>
         </li>
-        <li> <a href="project.html" class="thumb"> <img src="img/dummies/f-02.jpg" alt="">
+        <li> <a href="project.html" class="thumb"> <img src="img/dummies/slides/02.jpg" alt="">
             <div class="img-overlay">READ MORE</div>
           </a> <a href="project.html" class="title">LOREM IPSUM DOLOR</a>
           <div class="categories"><a href="#">webdesign, </a><a href="#">print, </a><a href="#">photo</a></div>
@@ -58,7 +59,7 @@
             egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</div>
           <a href="project.html" class="action-button">READ MORE</a>
         </li>
-        <li> <a href="project.html" class="thumb"> <img src="img/dummies/f-03.jpg" alt="">
+        <li> <a href="project.html" class="thumb"> <img src="img/dummies/slides/03.jpg" alt="">
             <div class="img-overlay">READ MORE</div>
           </a> <a href="project.html" class="title">LOREM IPSUM DOLOR</a>
           <div class="categories"><a href="#">webdesign, </a><a href="#">print, </a><a href="#">photo</a></div>
@@ -67,40 +68,51 @@
           <a href="project.html" class="action-button">READ MORE</a>
         </li>
       </ul>
-      <div class="one-third-col">
-        <div class="line-heading"> RECENT POSTS <a href="work.html">view all</a></div>
-        <ul class="recent-posts">
-          <li> <a href="single.html" class="title">Lorem Ipsum Dolor</a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Praesent dapibu</a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Quisque sit amet</a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Vestibulum tortor quam</a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Malesuada fames</a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Tortor quam</a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Donec eu libero </a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Mauris placerat eleifend </a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-          <li> <a href="single.html" class="title">Mauris placerat eleifend </a> <span class="date">Jan 12</span> <span
-              class="author">by Ansimuz</span></li>
-        </ul>
-      </div>
-      <div class="two-third-col">
-        <div class="line-heading"> FEATURED VIDEO </div>
-        <div class='video-container'>
-          <iframe src="http://player.vimeo.com/video/42097971"></iframe>
+      <div class="tagline">CONTACTANOS</div>
+      <div id="main" class="cf">
+        <div class="page-content">
+          <div class="entry-content cf">
+
+            <div id="map"></div>
+            <p> <strong>Dirección</strong><br>
+              Av. 122 entre 35 y 35 bis, número 152, Ensenada<br>
+              <strong>Celular</strong><br><a href="tel:+5492215758786"> (221) 15 5758786</a>
+              <br>
+            </p>
+            <div class="block-divider"></div>
+            <h3>Envianos tu consulta</h3>
+            <form id="contactForm" action="#" method="post">
+              <fieldset>
+                <p>
+                  <label for="name">Nombre</label>
+                  <input name="name" id="name" type="text" class="form-poshytip" title="Enter your full name">
+                </p>
+                <p>
+                  <label for="email">Email</label>
+                  <input name="email" id="email" type="text" class="form-poshytip" title="Enter your email address">
+                </p>
+
+                <p>
+                  <label for="comments">Mensaje</label>
+                  <textarea name="comments" id="comments" rows="5" cols="20" class="form-poshytip"
+                    title="Enter your comments"></textarea>
+                </p>
+                <input type="hidden" value="ENTER SUBJECT HERE" name="subject" id="subject">
+                <p>
+                  <input type="button" value="Enviar" name="submit" id="submit">
+                  <span id="error" class="warning">Mensaje</span>
+                </p>
+              </fieldset>
+            </form>
+            <p id="sent-form-msg" class="success">Mensaje enviado. Gracias por su conrulta!</p>
+          </div>
         </div>
-        <h3>Lorem Ipsum Dolor Amet</h3>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-          tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
-          semper. Aenean ultricies mi vitae est. </p>
       </div>
+
     </div>
+
+
+
     <ul class="widget-cols cf">
       <li class="first-col">
         <div class="widget-block">
@@ -121,6 +133,11 @@
             semper.</p>
         </div>
       </li>
+
+
+
+
+
       <li class="fourth-col">
         <div class="widget-block">
           <h4>CATEGORIES</h4>
@@ -140,14 +157,35 @@
     <footer class="cf">Copyright &copy; 2045 Company Name | Design by: <a
         href="http://www.luiszuno.com">luiszuno.com</a></footer>
   </div>
+
+
+
+
   <script src="js/jquery.js"></script>
   <script src="js/custom.js"></script>
+  <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script src="js/gmaps.js"></script>
   <script src="js/superfish-1.4.8/js/hoverIntent.js"></script>
   <script src="js/superfish-1.4.8/js/superfish.js"></script>
   <script src="js/superfish-1.4.8/js/supersubs.js"></script>
   <script src="js/css3-mediaqueries.js"></script>
   <script src="js/nivoslider.js"></script>
   <script src="js/tabs.js"></script>
+  <script src="js/form-validation.js"></script>
+  <script>
+    var map;
+    $(document).ready(function () {
+      map = new GMaps({
+        div: '#map',
+        lat: -34.8895844471213,
+        lng: -57.95041792479602
+      });
+      map.addMarker({
+        lat: -34.8895844471213,
+        lng: -57.95041792479602
+      });
+    });
+  </script>
 </body>
 
 </html>
