--- a/madison/index.html
+++ b/madison/index.html
@@ -21,7 +21,7 @@
 <body>
   <div class="wrapper">
     <header class="cf">
-      <div class="container" id="logo"><a href="index.html">
+      <div id="logo"><a href="index.html">
           <img src="img/Black & White Bold Modern Trade Electrician Logo (1).png">
         </a>
       </div>
@@ -73,12 +73,14 @@
         <div class="page-content">
           <div class="entry-content cf">
 
-            <div>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.672179988786!2d-57.95260628483144!3d-34.88957738038636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e657ff6c3d1d%3A0x62c9f01afecb7a17!2sAv.%20122%20152%2C%20B1926%20La%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1679193551167!5m2!1ses-419!2sar"
-                width="950" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="container-fluid">
+              <div class="map-responsive">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.672179988786!2d-57.95260628483144!3d-34.88957738038636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e657ff6c3d1d%3A0x62c9f01afecb7a17!2sAv.%20122%20152%2C%20B1926%20La%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1679193551167!5m2!1ses-419!2sar"
+                  width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              </div>
             </div>
+
             <br>
             <p> <strong>Dirección</strong><br>
               Av. 122 entre 35 y 35 bis, número 152, Ensenada<br>
