--- a/madison/index.html
+++ b/madison/index.html
@@ -44,23 +44,23 @@
 
       <ul class="feature cf">
         <li> <a href="project.html" class="thumb"> <img src="img/dummies/slides/01.jpg" alt="">
-            <div class="img-overlay">READ MORE</div>
+            <div class="img-overlay">LEER MAS</div>
           </a> <a href="project.html" class="title">LOREM IPSUM DOLOR</a>
           <div class="categories"><a href="#">webdesign, </a><a href="#">print, </a><a href="#">photo</a></div>
           <div class="excerpt">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
             egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</div>
-          <a href="project.html" class="action-button">READ MORE</a>
+          <a href="project.html" class="action-button">LEER MAS</a>
         </li>
         <li> <a href="project.html" class="thumb"> <img src="img/dummies/slides/02.jpg" alt="">
-            <div class="img-overlay">READ MORE</div>
+            <div class="img-overlay">LEER MAS</div>
           </a> <a href="project.html" class="title">LOREM IPSUM DOLOR</a>
           <div class="categories"><a href="#">webdesign, </a><a href="#">print, </a><a href="#">photo</a></div>
           <div class="excerpt">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
             egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</div>
-          <a href="project.html" class="action-button">READ MORE</a>
+          <a href="project.html" class="action-button">LEER MAS</a>
         </li>
         <li> <a href="project.html" class="thumb"> <img src="img/dummies/slides/03.jpg" alt="">
-            <div class="img-overlay">READ MORE</div>
+            <div class="img-overlay">LEER MAS</div>
           </a> <a href="project.html" class="title">LOREM IPSUM DOLOR</a>
           <div class="categories"><a href="#">webdesign, </a><a href="#">print, </a><a href="#">photo</a></div>
           <div class="excerpt">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
@@ -142,28 +142,11 @@
         </div>
       </li>
 
-
-
-
-
-      <li class="fourth-col">
-        <div class="widget-block">
-          <h4>CATEGORIES</h4>
-          <ul>
-            <li class="cat-item"><a href="#">Design</a></li>
-            <li class="cat-item"><a href="#">Photo</a></li>
-            <li class="cat-item"><a href="#">Art</a></li>
-            <li class="cat-item"><a href="#">Game</a></li>
-            <li class="cat-item"><a href="#">Film</a></li>
-            <li class="cat-item"><a href="#">TV</a></li>
-          </ul>
-        </div>
-      </li>
       <li class="scroll"></li>
     </ul>
     <div class="footer-divider"></div>
     <footer class="cf">Copyright &copy; 2045 Company Name | Design by: <a
-        href="http://www.luiszuno.com">luiszuno.com</a></footer>
+        href="https://www.linkedin.com/in/ramirofoschini/">Ramiro Foschini</a></footer>
   </div>
 
 
@@ -172,7 +155,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/custom.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-  <script src="js/gmaps.js"></script>
+
   <script src="js/superfish-1.4.8/js/hoverIntent.js"></script>
   <script src="js/superfish-1.4.8/js/superfish.js"></script>
   <script src="js/superfish-1.4.8/js/supersubs.js"></script>
@@ -180,20 +163,7 @@
   <script src="js/nivoslider.js"></script>
   <script src="js/tabs.js"></script>
   <script src="js/form-validation.js"></script>
-  <script>
-    var map;
-    $(document).ready(function () {
-      map = new GMaps({
-        div: '#map',
-        lat: -34.8895844471213,
-        lng: -57.95041792479602
-      });
-      map.addMarker({
-        lat: -34.8895844471213,
-        lng: -57.95041792479602
-      });
-    });
-  </script>
+
 </body>
 
 </html>
