--- a/madison/index.html
+++ b/madison/index.html
@@ -84,7 +84,10 @@
             <br>
             <p> <strong>Dirección</strong><br>
               Av. 122 entre 35 y 35 bis, número 152, Ensenada<br>
-              <strong>Celular</strong><br><a href="tel:+5492215758786"> (221) 15 5758786</a>
+              <strong>Celular</strong><br><a
+                href="https://wa.me/2215758786?text=Hola%2C+me+gustaria+averiguar+un+presupuesto.">
+                (221) 15
+                5758786</a>
               <br>
             </p>
             <div class="block-divider"></div>
